# Simple-Operating-System

./: .gitignore  README.md
kernel/src/object/: untyped.c
libnfs/include/nfsc/: libnfs.h
projects/aos/: CMakeLists.txt  odroid  settings.cmake
projects/aos/apps/console_test/src/: console_test.c
projects/aos/apps/console_test_2/: CMakeLists.txt
projects/aos/apps/console_test_2/src/: console_test_2.c
projects/aos/apps/sosh/: results.tsv
projects/aos/apps/sosh/src/: benchmark.c  sosh.c
projects/aos/libclock/include/clock/: clock.h  idstack.h
projects/aos/libclock/src/: clock.c
projects/aos/libnetworkconsole/src/: networkconsole.c
projects/aos/libsosapi/include/: sos.h  syscalls.h
projects/aos/libsosapi/src/: sos.c  sys_morecore.c  sys_stdio.c  vsyscall.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: addrspace.c  addrspace.h  boot_driver.c  boot_driver.h  buffercache.c  buffercache.h  clock_replacement.c  clock_replacement.h  console.c  console.h  dentry.c  dentry.h  elf.c  elfload.h  frame_table.c  frame_table.h  fs.c  fs.h  irq.c  khash.h  libelf.c  main.c  mapping.c  mapping.h  network.c  network.h  nfs.c  nfs.h  open_file.c  open_file.h  process.c  process.h  sharedvm.c  sharedvm.h  sos_syscall.c  sos_syscall.h  thread_pool.c  thread_pool.h  threads.c  threads.h  (+3 more)
projects/aos/sos/src/drivers/: uart.c
projects/libcpio/src/: cpio.c
projects/libelf/include/elf/: elf64.h
projects/libelf/src/: elf.c  elf64.c
projects/libsel4sync/include/sync/: bin_sem_bare.h
projects/libutils/include/utils/: sglib.h
(+3 files in other folders)
